// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="App"
    >
      <nav
        className="af ag ah ai aj ak al am an"
        data-baseweb="header-navigation"
        role="navigation"
      >
        <div
          className="aj ao ap aq ar as at au"
        >
          <div
            className="av ar"
          >
            <h1
              className="ae"
            >
              Next Movie
            </h1>
          </div>
        </div>
        <div
          className="aj ao ap aw ar as ax ay"
        />
        <div
          className="aj ao ap aq ar as az b0"
        >
          <div
            className="av ar"
            style={
              Object {
                "width": "370px",
              }
            }
          >
            <div
              className="af b1 ah b2 b3 aj b4"
              data-baseweb="input"
            >
              <div
                className="b5 aj b4 b6 b7 b8 b9 ba bb bc bd be af b1 ah b2 b3 bf bg"
                data-baseweb="base-input"
              >
                <div
                  className="aj bh bi"
                >
                  <svg
                    className="bj bk bl bm bn"
                    data-baseweb="icon"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      Search
                    </title>
                    <path
                      clipRule="evenodd"
                      d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
                <input
                  aria-describedby={null}
                  aria-invalid={false}
                  aria-label={null}
                  aria-labelledby={null}
                  aria-required={false}
                  autoComplete="on"
                  className="b5 bo bp bq br b4 bs bt bu bv bw bx by af b1 ah b2 b3 bz c0"
                  disabled={false}
                  id="typeahead"
                  inputMode="text"
                  name=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onKeyUp={[Function]}
                  pattern={null}
                  placeholder="Search a movie by title"
                  required={false}
                  rows={null}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="av ar"
          >
            <button
              className="c1 bh ay bp bq c2 br c3 c4 b9 ba c5 c6 c7 c8 c9 ca cb cc af ag cd ai bd be bb bc bv bw bi ce cf cg ch ci cj"
              data-baseweb="button"
              disabled={false}
              onClick={[Function]}
            >
              Sign In
            </button>
          </div>
          <div
            className="av ar"
          />
        </div>
      </nav>
      <header
        className="App-header"
      >
        <img
          alt="logo"
          className="App-logo"
          src="logo.svg"
        />
        <p>
          Edit 
          <code>
            src/App.js
          </code>
           and save to reload.
        </p>
        <a
          className="App-link"
          href="https://reactjs.org"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn React
        </a>
      </header>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots HeaderNavigation Base 1`] = `
Array [
  <div
    className=""
  >
    <nav
      className="af ag ah ai aj ak al am an"
      data-baseweb="header-navigation"
      role="navigation"
    >
      <div
        className="aj ao ap aq ar as at au"
      >
        <div
          className="av ar"
        >
          <h1
            className="ae"
          >
            Next Movie
          </h1>
        </div>
      </div>
      <div
        className="aj ao ap aw ar as ax ay"
      />
      <div
        className="aj ao ap aq ar as az b0"
      >
        <div
          className="av ar"
          style={
            Object {
              "width": "370px",
            }
          }
        >
          <div
            className="af b1 ah b2 b3 aj b4"
            data-baseweb="input"
          >
            <div
              className="b5 aj b4 b6 b7 b8 b9 ba bb bc bd be af b1 ah b2 b3 bf bg"
              data-baseweb="base-input"
            >
              <div
                className="aj bh bi"
              >
                <svg
                  className="bj bk bl bm bn"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Search
                  </title>
                  <path
                    clipRule="evenodd"
                    d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-describedby={null}
                aria-invalid={false}
                aria-label={null}
                aria-labelledby={null}
                aria-required={false}
                autoComplete="on"
                className="b5 bo bp bq br b4 bs bt bu bv bw bx by af b1 ah b2 b3 bz c0"
                disabled={false}
                id="typeahead"
                inputMode="text"
                name=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                pattern={null}
                placeholder="Search a movie by title"
                required={false}
                rows={null}
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="av ar"
        >
          <button
            className="c1 bh ay bp bq c2 br c3 c4 b9 ba c5 c6 c7 c8 c9 ca cb cc af ag cd ai bd be bb bc bv bw bi ce cf cg ch ci cj"
            data-baseweb="button"
            disabled={false}
            onClick={[Function]}
          >
            Sign In
          </button>
        </div>
        <div
          className="av ar"
        />
      </div>
    </nav>
  </div>,
  <div
    className=""
  />,
]
`;
